--- a/style.css
+++ b/style.css
@@ -1,215 +1,70 @@
-body{
+html {
+    font-size: 11px;
+}
 
-    margin-top: 40px;
+table {
+    width: 100%;
+    table-layout: fixed;
+    word-break: break-all;
+}
 
-    background: #F08080;
-
-    color: #ffffff;
-
-    font-family: Helvetica;
-
-    font-weight: bold;
-
+div {
+    max-width: 100%;
     text-align: center;
-
-    
-
 }
 
- 
-
-h1{
-
-    text-transform: uppercase;
-
-    font-size: 2em;
-
-    letter-spacing: 0.1em;
-
-    color: azure;
-
-    
-
-}
-
-.container {
-
-    margin: o auto;
-
-    width: 400px;
-
-    
-
-}
-.buttonRow{
+th {
     text-align: center;
-
-    border: none;
-
-    padding: 0.06em 1.2em;
-
-    background: #ed4e6e;
-
-    color: #ffffff;
-
-    font-size: 1em;
-
-    letter-spacing: 1px;
-
-    text-transform: uppercase;
-
-    cursor: pointer;
-
-    display: inline-block;
-
-    margin: 3px 2px;
-
-    border-radius: 10px;
 }
 
-
- 
-
-#game{
-
-    width: 300px;
-
-    height: 300px;
-
-    border: 1px solid #2c3e52;
-
-    margin: 0 auto;
-
-    padding: 0;
-
-    margin-bottom: 20px;
-
-    
-
+table, th, td {
+    border: 1px solid black;
 }
 
- 
+img { 
+    max-width: 25%; 
+    height: auto; 
+}
 
-#game > li {
+button {
+    margin: 4px;
+}
 
-    list-style: none;
+#code-block {
+    background-color: #eee;
+    border: 1px solid #999;
+    display: block;
+    padding: 20px;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    overflow-x: auto;
+    white-space: nowrap;
+}
 
-    float: left;
+#profilePictureDiv {
+    text-align: center;
+}
 
-    overflow: hidden;
-
-    width: 100px;
-
+#profileImageDiv {
     height: 100px;
-
-    background: #17202a ;
-
-    border: 1px solid #2c3e52 ;
-
-    border-right: 1px solid #2c3e52 ;
-
-    cursor: pointer;
-
-    text-transform: uppercase;
-
-    text-align: center;
-
-    padding-top: 20px;
-
-    -moz-box-sizing: border-box;
-
-    box-sizing: border-box;
-
-}
-
- 
-
-#game > li.🐱 {
-
-    font-size: 40px;
-
-    color: #ed4e6e;
-
-}
-
- 
-
-#game > li.🐶 {
-
-    font-size: 40px;
-
-    color: aqua;
-
-}
-
- 
-
-#game > li:hover {
-
-    background: #212f3d;
-
-}
-
- 
-
-#game >li.active {
-
     width: 100px;
-
-    height: 100px;
-
-    border: 0;
-
 }
 
- 
-
-#nfo {
-
-    text-align: center;
-
-    margin-top: 5px;
-
-    
-
+#statusMessage {
+    position: relative;
+    top: 40px;
 }
 
- 
-
- 
-
-#reset-game {
-
-    text-align: center;
-
-    border: none;
-
-    padding: 0.06em 1.2em;
-
-    background: #ed4e6e;
-
-    color: #ffffff;
-
-    font-size: 1em;
-
-    letter-spacing: 1px;
-
-    text-transform: uppercase;
-
-    cursor: pointer;
-
-    display: inline-block;
-
-    margin: 3px 2px;
-
-    border-radius: 10px;
-
+.textLeft {
+    text-align: left;
 }
 
- 
+.buttonGroup {
+    position: relative;
+    top: 20px;
+}
 
-#reset-game:hover {
-
-    background: #2c3e52;
-
+.hidden {
+    display: none;
 }
